--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButtonGroup">
-                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselBtn">
                             <span class="fa fa-pause"></span>
                         </button>
                     </div>
@@ -318,16 +318,16 @@
     <script>
         $(document).ready(function() {
             $('#mycarousel').carousel({ interval: 2000});
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+            $("#carouselBtn").click(function(){
+                if ($("#carouselBtn").children("span").hasClass('fa-pause')) {
                     $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
+                    $("#carouselBtn").children("span").removeClass('fa-pause');
+                    $("#carouselBtn").children("span").addClass('fa-play');
                 }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                else if ($("#carouselBtn").children("span").hasClass('fa-play')) {
                     $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
+                    $("#carouselBtn").children("span").removeClass('fa-play');
+                    $("#carouselBtn").children("span").addClass('fa-pause');                    
                 }
             });
         });
