--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginModalToggle">
                         <span class="fa fa-sign-in">Login</span>
                     </a>
                 </span>
@@ -167,7 +167,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-warning btn-block nav-link" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                    <a role="button" class="btn btn-warning btn-block nav-link" id="reserveModalToggle">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -329,6 +329,14 @@
                     $("#carouselBtn").children("span").removeClass('fa-play');
                     $("#carouselBtn").children("span").addClass('fa-pause');                    
                 }
+            });
+
+            $('#loginModalToggle').click(function() {
+                $('#loginModal').modal('toggle');
+            });
+
+            $('#reserveModalToggle').click(function() {
+                $('#reserveModal').modal('toggle');
             });
         });
     </script>
